tests/fixtures/invalid/set_bitand_float.py
# Cannot bitwise AND Set[int] and Float
x: float = {1, 2, 3} & 1.0
